--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Captcha::reCAPTCHA::V2 - A Perl implementation of reCAPTCHA API version 2
 
 =head1 VERSION
 
-version 0.1
+version 0.001
 
 =head1 SYNOPSIS
 
@@ -74,6 +74,8 @@ C<'image'>.
 =item * C<size>
 
 The size of the widget. Possible values are C<'compact'> and C<'normal'>.
+
+=back
 
 =back
 
