Fix link in documentation

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Captcha-reCAPTCHA-V2
 
 {{$NEXT}}
+          Fixed link in documentation
 
 0.1       2015-08-19
           First version, released on an unsuspecting world.
