--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Captcha::reCAPTCHA::V2 - A Perl implementation of reCAPTCHA API version 2
 
 =head1 VERSION
 
-version 0.1
+version 0.2
 
 =head1 SYNOPSIS
 
@@ -79,7 +79,7 @@ The size of the widget. Possible values are C<'compact'> and C<'normal'>.
 
 =back
 
-See also: <grecaptcha.render parameters|https://developers.google.com/recaptcha/docs/display#render_param>.
+See also: L<grecaptcha.render parameters|https://developers.google.com/recaptcha/docs/display#render_param>.
 
 =head2 verify
 
